--- a/style.css
+++ b/style.css
@@ -523,6 +523,9 @@ input:focus {
     /* margin-left: 1rem; */
     margin: auto;
 }
+.column a{
+    text-align: center;
+}
 
 .brand-grid a {
     color: white;
@@ -827,7 +830,7 @@ input:focus {
     }
 
     .volunteer {
-        width: 436px;
+        width: 100%;
     }
 
     .col-3.conjection-froud {
@@ -846,7 +849,7 @@ input:focus {
 
     .wanted img {
         margin-left: -15px;
-        width: 436px;
+        width: 100%;
         height: 278px;
     }
 
