--- a/style.css
+++ b/style.css
@@ -809,14 +809,41 @@ input:focus {
     border-bottom: 10px solid #76b1d0;
 }
 
-@media (max-width:1200px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
     .volunteer {
         width: 500px;
+    }
+
+    .comfort-life {
+        width: 100%;
+    }
+
+    .comfort-life {
+        display: none;
+    }
+
+    .wanted {
+        display: none;
+    }
+
+    body {
+        overflow-x: hidden;
     }
 
     .col-5 {
         display: none;
     }
+
+    .col-md-3.conjection-froud img {
+        width: auto;
+    }
+
+    .conjection-froud {
+        width: 20% !important;
+        margin-left: 0 !important;
+    }
+
+
 
     .comfort-life-zone {
         display: none;
