--- a/style.css
+++ b/style.css
@@ -96,13 +96,13 @@ span {
 
 
 .nav-link {
-
     font-family: "Oswald", sans-serif;
     position: relative;
     display: block;
     font-weight: 400;
+    text-transform: uppercase;
     color: #575757;
-    font-size: 19px;
+    font-size: 16px;
 }
 
 .icon-container {
@@ -284,6 +284,7 @@ input:focus {
     width: 363px;
     margin-left: 11px;
     height: 172px;
+    border-radius: 6px;
 }
 
 .col-lg-4.conjection-froud h1,
@@ -336,9 +337,9 @@ input:focus {
 }
 
 .froud img {
-    width: 350px;
-    margin-left: 5px;
-    height: 140px;
+    width: 363px;
+    /* margin-left: 11px; */
+    height: 172px;
 }
 
 .cent {
