--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ span {
     font-family: "Oswald", sans-serif;
     position: relative;
     display: block;
-    font-weight: 400;
+    font-weight: 500;
     text-transform: uppercase;
     color: #575757;
     font-size: 16px;
@@ -182,12 +182,12 @@ input:focus {
 .controvecy {
     margin-left: 12px;
 }
-
 .support .col-md-4 .solid {
     margin-left: -13px;
     background-color: #090E21;
     color: white;
-    font-size: 21px;
+    text-transform: uppercase;
+    font-size: 16px;
     letter-spacing: -1px;
     border: none;
 }
