--- a/style.css
+++ b/style.css
@@ -965,6 +965,197 @@ body {
     background-color: #f8f9fa;
 }
 
+span {
+    font-family: 'oswald';
+    color: black;
+    font-size: 12px;
+    font-weight: 300;
+}
+
+.stat-item {
+    align-items: center;
+    height: 98px;
+    width: 137px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+    margin: 5px 0 12px;
+    border-left: 1px solid #ccc;
+    float: left;
+    padding: 0px 10px;
+    text-shadow: 1px 1px 0px hsla(0, 0%, 100%, .4) !important;
+
+    position: relative;
+    z-index: 1;
+}
+
+/* Desktop (side by side) */
+.specs-table tr {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    /* left fixed, right flexible */
+}
+
+/* Mobile (stack) */
+@media (max-width: 768px) {
+    .specs-table tr {
+        grid-template-columns: 1fr;
+        /* single column */
+    }
+}
+
+.spec-title {
+    font-weight: 400;
+    font-family: 'oswald';
+    font-size: 1.5rem;
+    color: black;
+}
+
+.stat-item {
+    /* padding: 24px; */
+    border-left: 1px solid hsla(0, 0%, 100%, .5);
+}
+
+.spec-item {
+    padding: 20px;
+}
+
+.stat-item :nth-child(1) {
+    font-size: 1.6rem;
+    font-weight: 600;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .4);
+}
+
+.stat-item :nth-child(2) {
+    font-family: 'oswald';
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .4);
+}
+
+.bg-blur {
+    position: relative;
+    z-index: 1;
+}
+
+.bg-blur::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /* background: linear-gradient(135deg, rgba(107, 115, 255, 0.7), rgba(0, 13, 255, 0.7)); */
+    filter: blur(8px);
+    z-index: 0;
+    border-radius: 8px;
+}
+
+.bg-blur>* {
+    position: relative;
+    z-index: 2;
+}
+
+
+.spec-subtitle {
+    font-family: 'oswald';
+    font-weight: 100;
+    font-size: 14px;
+    color: black;
+}
+
+
+.card-header {
+    position: relative;
+    overflow: hidden;
+}
+
+.card-header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: inherit;
+    /* same background lega */
+    filter: blur(5px);
+    z-index: 1;
+}
+
+.card-header * {
+    position: relative;
+    z-index: 2;
+    /* content clear dikhayega */
+}
+
+.vr-hide {
+    float: left;
+    padding-left: 10px;
+    font: 300 28px / 47px Google-Oswald, Arial, sans-serif;
+    text-shadow: none;
+    color: #fff;
+    margin-bottom: 0px;
+    margin-top: -2px;
+}
+
+.phone-image:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 165px;
+    width: 229px;
+    height: 100%;
+    background: linear-gradient(90deg, #fff 0%, #fcfeff 2%, rgba(125, 185, 232, 0));
+    z-index: 1;
+}
+
+.phone-image {
+    display: block;
+    height: -webkit-fill-available;
+    width: 165px;
+    position: relative;
+    z-index: 2;
+    background: #fff;
+}
+
+tr {
+    background-color: white;
+    margin-bottom: 10px;
+}
+
+table td,
+table th {
+    vertical-align: top;
+    padding: 8px 12px;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.5;
+}
+
+table tbody tr {
+    background-color: white;
+    border-bottom: 1px solid #ddd;
+}
+
+table tbody tr:last-child {
+    border-bottom: none;
+}
+
+.spec-label {
+    width: 120px;
+    color: #d50000;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+td strong {
+    display: inline-block;
+
+    width: 90px;
+    font-weight: 600;
+}
+
+
 .phone-card {
     border: 1px solid #ccc;
     padding: 15px;
@@ -1799,7 +1990,7 @@ td {
     text-shadow: 1px 1px 6px rgba(0, 0, 0, .3);
 }
 
-.red-button{
+.red-button {
     background-color: #d50000;
     color: white;
     font-size: 14px;
@@ -1808,14 +1999,16 @@ td {
     font-weight: 600;
     float: inline-end;
 }
+
 .vivo-div {
-       position: absolute;
+    position: absolute;
     z-index: 5;
     position: relative;
     bottom: 53px;
     width: max-content;
     padding: 5px 10px 0 15px;
 }
+
 .vivo-div strong {
     color: #333;
     font: 600 18px / 1.4 Google-Oswald, Arimo, Arial, sans-serif;
@@ -2223,9 +2416,9 @@ td {
         width: -webkit-fill-available;
         /* height: 370px; */
     }
- 
-    .article-info{
+
+    .article-info {
         height: auto;
     }
-    
-    }   
+
+}
