--- a/style.css
+++ b/style.css
@@ -360,11 +360,14 @@ input:focus {
     overflow-y: scroll;
     overflow-x: hidden;
 }
+.canel{
+    width: 80px;
+}
 
 .shrink {
 
-    width: 100%;
-    height: 111px;
+    width: 115%;
+    height: 119px;
     margin-top: 10px;
 }
 
