--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ input:focus {
 .devor button {
     border: none;
     font-size: 12px;
-       font-weight: 500;
+    font-weight: 500;
     margin-top: -1px;
     padding: 3px 0px;
     letter-spacing: -0.19px;
@@ -360,7 +360,8 @@ input:focus {
     overflow-y: scroll;
     overflow-x: hidden;
 }
-.canel{
+
+.canel {
     width: 80px;
 }
 
@@ -606,7 +607,7 @@ input:focus {
 
 .comfort-life {
     width: 720px;
-    height: 370px;
+    height: 340px;
     overflow-y: auto;
     /* Corrected background image URL with encoded spaces and commas */
     background: url("imges/ChatGPT\ Image\ May\ 14\,\ 2025\,\ 01_11_08\ PM.png") no-repeat center center;
@@ -1049,6 +1050,7 @@ input:hover {
     margin-bottom: 10px;
     background-color: #F3F3F3;
     padding: 5px;
+ 
 }
 
 .compare-checkbox label {
@@ -1056,7 +1058,10 @@ input:hover {
 }
 
 .compare-checkbox input {
-    margin-left: 5px;
+    /* margin-left: 5px; */
+       font-family: sans-serif;
+    width: 152%;
+    display: block;
 }
 
 .phone-card img:nth-child(2) {
@@ -1920,7 +1925,7 @@ td {
 
 @media screen and (max-width:1047px) {
 
-      .article-info {
+    .article-info {
         height: auto;
     }
 
@@ -2224,16 +2229,21 @@ td {
         display: grid;
         grid-template-columns: repeat(2, 2fr);
     }
-    .spec-label{
+
+    .spec-label {
         font-size: 1rem;
     }
-    strong{
+
+    strong {
         font-size: 12px;
     }
-    .table{
+
+    .table {
         border: none;
     }
-    .table th, .table td{
+
+    .table th,
+    .table td {
         border: none;
         /* padding: 4px 3px; */
     }
