--- a/style.css
+++ b/style.css
@@ -1167,9 +1167,9 @@ cubic-bezier(0.26, 0.695, 0.375, 0.965);
     /* box-shadow: 0px 2px 4px var(--color-card-shadow, #cfcfcf); */
     background-color: var(--color-card-background);
     padding: 15px 0px;
+    margin: 10px 0px;
+
 }
-
-
 .swiper-container-android .swiper-slide, .swiper-wrapper {
     -ms-transform: translateZ(0);
     transform: translateZ(0);
